# f1-analytics-lab

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  LICENSE  Makefile  QUICK_DEPLOY.md  README.md  RUN_BACKEND.sh  START_ALL_SERVICES.sh  UI_REDESIGN_SUMMARY.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  package-lock.json  start_backend.sh  test_features.sh  test_phase5_live.py  vercel.json
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_live_sessions.py
apps/api/src/f1hub/: main.py
apps/api/src/f1hub/api/: router.py
apps/api/src/f1hub/api/v1/: __init__.py  chat.py  drivers.py  features.py  health.py  ingest.py  laps.py  live.py  mock_sessions.py  models.py  predictions.py  races.py  sessions.py  stints.py  strategy.py
apps/api/src/f1hub/core/: config.py  dependencies.py  errors.py  logging.py
apps/api/src/f1hub/db/: base.py  session.py
apps/api/src/f1hub/db/models/: __init__.py  base.py  core.py  features.py  live.py  llm.py  models.py  timing.py  track_status.py
apps/api/src/f1hub/ml/: __init__.py  base.py
apps/api/src/f1hub/ml/features/: __init__.py  battle_features.py  lap_features.py  stint_features.py
apps/api/src/f1hub/ml/models/: __init__.py  lap_time.py  overtake.py  race_result.py  tyre_degradation.py
apps/api/src/f1hub/schemas/: __init__.py  chat.py  common.py  drivers.py  features.py  ingest.py  laps.py  models.py  predictions.py  races.py  sessions.py  stints.py  strategy.py
apps/api/src/f1hub/services/: fastf1_ingest.py  feature_builder.py  ml_service.py
apps/api/src/f1hub/services/live/: __init__.py  live_timing_service.py  openf1_client.py  websocket_manager.py
apps/api/src/f1hub/services/llm/: __init__.py  chat_service.py  document_ingestor.py  embedding_service.py  llm_service.py  rag_service.py
apps/api/src/f1hub/services/strategy/: __init__.py  pit_strategy.py  race_simulation.py  safety_car.py
apps/api/src/f1hub/workers/: celery_app.py
apps/api/src/f1hub/workers/tasks/: ingest.py  ml.py
apps/api/tests/: conftest.py
apps/api/tests/test_api/: test_main.py
apps/web/: .env.local.example  .env.production.example  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/assistant/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/live/: page.tsx
apps/web/src/app/predictions/: page.tsx
apps/web/src/app/strategy/: page.tsx
apps/web/src/components/RacePicker/: index.tsx
apps/web/src/components/charts/: LapChart.tsx  StintChart.tsx
apps/web/src/components/layout/: BottomNav.tsx  TopNav.tsx
apps/web/src/components/live/: LiveLeaderboard.tsx
apps/web/src/components/predictions/: ModelSelector.tsx  PredictionForm.tsx  PredictionResults.tsx  PredictionSummaryCard.tsx
apps/web/src/components/strategy/: PositionFlowChart.tsx  RaceSimulation.tsx  SafetyCarStrategy.tsx  UndercutStrategy.tsx
apps/web/src/components/ui/: Button.tsx  Card.tsx  Chip.tsx  Spinner.tsx  Tabs.tsx
apps/web/src/hooks/: useLiveSession.ts
apps/web/src/lib/api/: chat.ts  client.ts  ingest.ts  laps.ts  live.ts  predictions.ts  races.ts  sessions.ts  stints.ts  strategy.ts
apps/web/src/types/: api.ts  chat.ts  predictions.ts  strategy.ts
docs/: architecture.md  decisions.md  phase1-summary.md
libs/f1data/: README.md  pyproject.toml
libs/f1data/src/f1data/clients/: __init__.py  fastf1_client.py  jolpica_client.py  openf1_client.py
libs/f1data/src/f1data/parsers/: __init__.py  fastf1_parser.py
scripts/: create_admin_user.py  dev_down.sh  dev_up.sh  ingest_all_races.py  seed_demo_data.py  test_phase1_complete.sh  test_phase1_simple.sh  test_predictions_ui.sh  test_race_simulation.py  test_safety_car.py  test_undercut_simple.py  test_undercut_strategy.py  train_lap_time.py  train_overtake.py  train_race_result.py  train_tyre_degradation.py
